# ActivityPing

./: README.md  index.html  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: artwork_server.rs  backend_locale.rs  commands.rs  custom_assets.rs  discord_presence.rs  lib.rs  main.rs  models.rs  realtime_reporter.rs  rules.rs  state_store.rs  tray.rs
src-tauri/src/artwork_server/: mod.rs  normalize.rs  publisher.rs  tests.rs  types.rs
src-tauri/src/commands/: assets.rs  mod.rs  platform.rs  runtime.rs  state.rs
src-tauri/src/discord_presence/: addons.rs  assets.rs  mod.rs  payload.rs  state.rs  tests.rs  text.rs  timestamps.rs
src-tauri/src/discord_presence/assets/: builders.rs  labels.rs  library.rs  mod.rs  selection.rs
src-tauri/src/discord_presence/client/: connection.rs  mapping.rs  mod.rs
src-tauri/src/discord_presence/tests/: addons.rs  artwork.rs  fixtures.rs  text.rs  timestamps.rs
src-tauri/src/discord_presence/text/: mod.rs  naming.rs
src-tauri/src/discord_presence/worker/: capture.rs  lifecycle.rs  mod.rs  runner.rs  validation.rs
src-tauri/src/models/: api.rs  defaults.rs  mod.rs  runtime.rs  state.rs
src-tauri/src/models/config/: capabilities.rs  client.rs  discord.rs  enums.rs  mod.rs
src-tauri/src/platform/: linux.rs  macos.rs  macos_bridge.h  macos_bridge.m  mod.rs  stub.rs  windows.rs
src-tauri/src/platform/linux/: command.rs  desktop_entries.rs  foreground.rs  (+7 more)
src-tauri/src/realtime_reporter/: logging.rs  mod.rs  state.rs
src-tauri/src/rules/: capture.rs  filters.rs  helpers.rs  message_rules.rs  mod.rs  resolve.rs  templates.rs  tests.rs  types.rs
src-tauri/src/tray/: ids.rs  mod.rs  notice.rs  text.rs  window.rs
(+132 files in other folders)
