[package]
name = "activityping"
version = "0.2.0"
description = "Desktop activity reporter for Waken-Wa and Discord presence sync"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "activityping_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
windows = { version = "0.58", features = ["ApplicationModel", "Foundation", "Media_Control", "Storage_Streams", "Win32_Graphics_Gdi", "Win32_Storage_FileSystem", "Win32_System_Com", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
uuid = { version = "1", features = ["v4"] }
hostname = "0.4"
discord-rich-presence = "1.1.0"
regex = "1"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.5.1"
tauri-plugin-single-instance = "2"
